# fopy

./: README.md  pyproject.toml  requirements.txt
fopy/: __init__.py  fopy.py
