[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fopy"
version = "0.1.0"
description = "Fopy is a quick and dirty wrapper allowing you to call Find_Orb from Python"
authors = [{name = "Ben Engebreth", email = "ben.engebreth@gmail.com"}]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["numpy", "astropy"]

[tool.setuptools]
packages = ["fopy"]
